# rumor

./: Cargo.toml  README.md
rumor/: Cargo.toml
rumor-client/: Cargo.toml
rumor-server/: Cargo.toml
rumor/resources/test/: PlayerMovement.latest.cs  unsafe.tiff  unsafe_prime.tiff
rumor/src/: lib.rs  qsync.rs
rumor/tests/: qsync.rs
