[package]
name = "rumor-client"
version = "0.1.0"
edition = "2021"

description = "reserved; client for rumor file synchronization protocol"

license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
